[gd_scene load_steps=10 format=3 uid="uid://3slhmycnigfl"]

[ext_resource type="Script" path="res://assets/Scripts/elementCrafter.gd" id="1_g8cc1"]
[ext_resource type="FontFile" uid="uid://yw0aqj6y760f" path="res://fonts/Kalam/Kalam-Regular.ttf" id="2_odklo"]
[ext_resource type="FontFile" uid="uid://buq1xebcecp7j" path="res://fonts/Kalam/Kalam-Bold.ttf" id="3_tgbku"]
[ext_resource type="Texture2D" uid="uid://8t6phigr1pse" path="res://assets/images/elements/1H.png" id="4_ku26h"]
[ext_resource type="Texture2D" uid="uid://d2vxn3wl3igpm" path="res://assets/images/elements/17Cl.png" id="5_xvmjq"]
[ext_resource type="Texture2D" uid="uid://eluekndkuujm" path="res://assets/images/elements/8O.png" id="6_yhfqm"]
[ext_resource type="Texture2D" uid="uid://cp7m0rf840tdq" path="res://assets/images/elements/11Na.png" id="7_3id1e"]
[ext_resource type="Texture2D" uid="uid://c2b286hhglh0v" path="res://assets/images/elements/7N.png" id="8_ldgij"]
[ext_resource type="Texture2D" uid="uid://dllqbbgkb360y" path="res://assets/images/elements/26Fe.png" id="9_ghra8"]

[node name="Control" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 853.0
offset_bottom = 574.0
scale = Vector2(1.07178, 1.07178)
script = ExtResource("1_g8cc1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -239.0
offset_top = 202.0
offset_right = 836.0
offset_bottom = 299.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("2_odklo")
theme_override_fonts/bold_font = ExtResource("3_tgbku")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 5.59802
offset_top = 208.998
offset_right = 545.598
offset_bottom = 747.998
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("4_ku26h")

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 145.552
offset_top = 417.996
offset_right = 685.552
offset_bottom = 956.996
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("5_xvmjq")

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 358.283
offset_top = 417.996
offset_right = 898.283
offset_bottom = 956.996
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("6_yhfqm")

[node name="TextureButton4" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 493.571
offset_top = 211.797
offset_right = 1033.57
offset_bottom = 750.797
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("7_3id1e")

[node name="TextureButton5" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 358.283
offset_top = 13.0624
offset_right = 898.283
offset_bottom = 552.062
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("8_ldgij")

[node name="TextureButton6" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 145.552
offset_top = 13.0624
offset_right = 685.552
offset_bottom = 552.062
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("9_ghra8")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="TextureButton6" to="." method="_on_texture_button_6_pressed"]
